# beamdpr

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.rst  test.py
.github/workflows/: ci.yml  release.yml
src/: bin.rs  lib.rs
test_data/: combined.egsphsp  combined.egsphsp1  first.egsinp  first.egslst  first.egsphsp  first.egsphsp1  second.egsgph  second.egsinp  second.egslst
tests/: egsphsp.rs
