[package]

name = "beamdpr"
description = "Combine and transform egsphsp (EGS phase space) files for use with BEAMnrc"
authors = ["Henry Baxter <henry.baxter@gmail.com>"]
license = "MIT"
version = "1.0.1"


documentation = "https://github.com/henrybaxter/beamdpr"
homepage = "https://github.com/henrybaxter/beamdpr"
repository = "https://github.com/henrybaxter/beamdpr"

keywords = ["egsphsp", "egsphsp1", "beamdp", "beamnrc", "egsnrc"]

[dependencies]
byteorder = "1"
clap = "2"
float-cmp = "0.8"
rand = "0.7"

[lib]
name = "egsphsp"
path = "src/lib.rs"

[[bin]]
name = "beamdpr"
path = "src/bin.rs"
