[package]

name = "beamdpr"
description = "Combine and transform egsphsp (EGS phase space) files for use with BEAMnrc"
authors = ["Henry Baxter <henry.baxter@gmail.com>"]
license = "MIT"
version = "1.2.0"
edition = "2024"
rust-version = "1.95"


documentation = "https://github.com/henrybaxter/beamdpr"
homepage = "https://github.com/henrybaxter/beamdpr"
repository = "https://github.com/henrybaxter/beamdpr"

keywords = ["egsphsp", "egsphsp1", "beamdp", "beamnrc", "egsnrc"]

[dependencies]
byteorder = "1"
clap = "4"
float-cmp = "0.10"
rand = "0.10"

[lib]
name = "egsphsp"
path = "src/lib.rs"

[[bin]]
name = "beamdpr"
path = "src/bin.rs"
